--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ li {
   list-style: none;
 }
 
-html {
+body {
   transition: opacity 5.8s cubic-bezier(.25,.1,.25,1);
   opacity: 0;
 }
@@ -16,7 +16,7 @@ body {
   margin: 0;
 }
 
-html.page-active {
+body.page-active {
   opacity: 1;
 }
 
