--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ li {
 }
 
 body {
-  transition: opacity 5.8s cubic-bezier(.25,.1,.25,1);
+  transition: 5.8s cubic-bezier(.25,.1,.25,1);
   opacity: 0;
 }
 
@@ -35,7 +35,7 @@ header {
   position: fixed;
   top: 20px;
   left: 20px;
-  transition: opacity .8s;
+  transition: .8s;
   transition-delay: 2.8s;
   opacity: 0;
   color: #fff;
@@ -57,7 +57,7 @@ header {
 .main-txt h2 {
   writing-mode: vertical-rl;
   line-height: 1.5em;
-  transition: opacity .8s;
+  transition: .8s;
   transition-delay: 1s;
   letter-spacing: .08em;
   opacity: 0;
@@ -69,7 +69,7 @@ header {
 }
 
 .main-txt ul {
-  transition: opacity .8s;
+  transition: .8s;
   transition-delay: 1.8s;
   opacity: 0;
   color: #fff;
@@ -90,7 +90,6 @@ header {
   line-height: 1.8em;
   margin-bottom: 40px;
 }
-
 
 .main-bottom {
   background: #ecf2e7;
