--- a/css/style.css
+++ b/css/style.css
@@ -25,29 +25,31 @@ header {
   background-size: cover;
 }
 
-.top__txt {
+.top_txt {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 1000px;
+  width: 80vw;
+  max-width: 1000px;
   height: 100%;
   margin: 0 auto;
 }
 
-.top__copy {
+.top_copy {
   writing-mode: vertical-rl;
   line-height: 1.5em;
   letter-spacing: .08em;
   color: #fff;
 }
 
-.top__list {
+.top_list {
   color: #fff;
 }
 
 .middle {
   max-width: 800px;
   margin: 80px auto;
+  padding: 0 16px;
 }
 
 .middle h3 {
@@ -65,13 +67,14 @@ header {
   background: #ecf2e7;
 }
 
-.bottom__wrapper {
+.bottom_wrapper {
   max-width: 810px;
   margin: 0 auto;
+  padding: 0 16px;
   padding-bottom: 66px;
 }
 
-.bottom__title {
+.bottom_title {
   font-size: 24px;
   overflow: hidden;
   margin-bottom: 80px;
@@ -79,16 +82,16 @@ header {
   text-align: center;
 }
 
-.bottom__sub-wrapper {
+.bottom_sub-wrapper {
   display: flex;
   justify-content: space-between;
 }
 
-.bottom__image {
+.bottom_image {
   width: 164px;
 }
 
-.bottom__image--title {
+.bottom_image--title {
   margin-top: 36px;
   text-align: center;
 }
